--- a/ICL_st.Rmd
+++ b/ICL_st.Rmd
@@ -22,13 +22,13 @@ library("foreign")
 
 ```{r}
 
-#usgs<-read.dbf("C:/Users/taohuang/Documents/Tao/Data/norwest/usgs_wt_ID_nearest.dbf")
+usgs<-read.dbf("C:/Users/taohuang/Documents/Tao/Data/norwest/usgs_wt_ID_nearest.dbf")
 
-usgs<-c( 12301933, 12413370)
+meanAugT_df<-data.frame(agency_cd= " ",site_no="", Date=as.Date("2000-01-01",format="%Y-%m-%d"),X_00010_00003=0,    X_00010_00003_cd= "",yr="",mo=0 )
 
-#12355347
-for (id in usgs) {
-  #for (id in usgs$STAID) {
+
+#for (id in usgs) {
+ for (id in usgs$STAID) {
   siteNumber <- as.character(id) 
   parameterCd <- "00010"
  ChoptankInfo <- readNWISsite(siteNumber)
@@ -40,13 +40,61 @@ meanT <-   readNWISdv(siteNumber, parameterCd,
   if (dim(meanT )[1]>0){
 meanT$yr<- format(meanT$Date, format = "%Y") 
 meanT$mo<-as.numeric(format(meanT$Date, format = "%m"))
-meanAugT<-meanT[meanT$mo==8,]
+meanAugT<-meanT[meanT$mo==8,c("agency_cd","site_no","Date","X_00010_00003","X_00010_00003_cd","yr","mo"  )]
+meanAugT_df <-rbind(meanAugT_df,meanAugT)
 }
 }
 
 ```
 
+```{r}
+meanAugT_df<-meanAugT_df[-1,]
 
+meanAugT_df_mean<-
+meanAugT_df %>%
+  group_by(site_no) %>%
+  summarize(mean_T=mean(X_00010_00003, na.rm = TRUE))
+
+meanAugT_df_usgs<-merge(meanAugT_df_mean,usgs,by="site_no")
+
+```
+
+```{r}
+meanAugT_df_usgs<-meanAugT_df_usgs[!meanAugT_df_usgs$site_no=="13185000",] 
+
+cor.test(meanAugT_df_usgs$S1_93_11,meanAugT_df_usgs$mean_T)
+
+new_old_t<-meanAugT_df_usgs[,c("S1_93_11","mean_T")]
+
+t.test(new_old_t$S1_93_11,new_old_t$mean_T)
+
+old_t<-meanAugT_df_usgs[,c("site_no","S1_93_11" )]
+old_t$model<-"S1_93_11"
+colnames(old_t)<-c("site_no","t","model" )
+
+new_t<-meanAugT_df_usgs[,c("site_no","mean_T" )]
+new_t$model<-"mean_T"
+colnames(new_t)<-c("site_no","t","model" )
+
+models<-rbind(old_t,new_t)
+
+
+
+ggplot(models, aes( model, t))+ geom_boxplot()
+
+#plot(meanAugT_df_usgs$S1_93_11, meanAugT_df_usgs$mean_T)
+
+all_t<-c(meanAugT_df_usgs$S1_93_11,meanAugT_df_usgs$mean_T)
+
+all_t %>% max() %>% ceiling()
+
+l<-seq( all_t %>% min() %>% floor(), all_t %>% max() %>% ceiling() , by = 1)
+ldf<-data.frame(x=l,y=l)
+
+ggplot() +
+  geom_point(data=meanAugT_df_usgs, aes(x=S1_93_11, y=mean_T))+
+  geom_line( data=ldf , aes(x=x, y=y))
+```
 
 
 
