--- a/random_forest_stream_T.Rmd
+++ b/random_forest_stream_T.Rmd
@@ -28,7 +28,7 @@ library("gradDescent")
 library("pracma")
 #install.packages("nls2")
 library("nls2")
-require(randomForest)
+require("randomForest")
 ```
 
 ```{r}
@@ -48,7 +48,7 @@ meanAugT_df<-data.frame(agency_cd= " ",site_no="", Date=as.Date("2000-01-01",for
  ChoptankInfo <- readNWISsite(siteNumber)
  #ChoptankInfo$alt_va : Gage datum feet above NGVD29
   statCd <- c("00003") # 00003	MEAN
-  startDate <- "2013-06-01"
+  startDate <- "2012-06-01"
 endDate <- "2021-09-01"
 meanT <-   readNWISdv(siteNumber, parameterCd, 
                                  startDate, endDate, statCd=statCd)
@@ -66,7 +66,7 @@ print(Sys.time())
 meanAugT_df<-meanAugT_df[-1,]
 meanAugT_df<-meanAugT_df[!meanAugT_df$site_no=="13185000" ,]
 
-save(meanAugT_df,file="C:/Users/taohuang/Downloads/ICL-main/meanQT_13_21.Rdata")
+save(meanAugT_df,file="C:/Users/taohuang/Downloads/ICL-main/meanQT_12_21.Rdata")
 
 ```
 
@@ -75,7 +75,7 @@ save(meanAugT_df,file="C:/Users/taohuang/Downloads/ICL-main/meanQT_13_21.Rdata")
 setwd("C:/Users/taohuang/Documents/Tao/Data/PRISM")
 temp_all<-data.frame(STAID<-c("00"),yr<-c(0),RASTERVALU<-0)
 colnames(temp_all)<-c("STAID","yr","RASTERVALU")
-for (yr in c(2013:2020)) {
+for (yr in c(2012:2020)) {
   temp<-read.dbf(paste("temp",yr,".dbf",sep=""))
   temp$yr<-yr
     temp<-temp[,c("STAID","yr","RASTERVALU")]
@@ -83,6 +83,7 @@ for (yr in c(2013:2020)) {
 }
 temp_all<-temp_all[-1,]
 head(temp_all)
+save(temp_all, file="C:/Users/taohuang/Downloads/ICL-main/temp_all.Rdata")
 ```
 
 ```{r}
@@ -92,7 +93,6 @@ summary(meanAugT_all)
 head(meanAugT_all)
 save(meanAugT_all,file="C:/Users/taohuang/Downloads/ICL-main/meanAugT_all.Rdata")
 ```
-
 
 #monthly air temp
 ```{r}
@@ -111,6 +111,7 @@ g$STAID<-as.character(g$STAID)
 meanAugT_all_mo2<-merge(g,meanAugT_all_mo,by.x="STAID",by.y="site_no")
 meanAugT_all_mo2
 meanAugT_all_mo3<-meanAugT_all_mo2[meanAugT_all_mo2$CLASS=="Ref",]
+meanAugT_all_mo4<-meanAugT_all_mo2[meanAugT_all_mo2$CLASS=="Non-ref",]
 dim(meanAugT_all_mo3)
 ```
 
@@ -119,7 +120,6 @@ dim(meanAugT_all_mo3)
 plot(meanAugT_all_mo$monthly_air_T, meanAugT_all_mo$monthly_stream_T)
 plot(meanAugT_all_mo3$monthly_air_T,meanAugT_all_mo3$monthly_stream_T)
 ```
-
 
 ```{r}
 summary(lm(meanAugT_all_mo$monthly_stream_T~ meanAugT_all_mo$monthly_stream_Q +meanAugT_all_mo$monthly_air_T+ meanAugT_all_mo$ele))
@@ -135,9 +135,20 @@ dim(meanAugT_all_mo)
 length(train)
 
 set.seed(101)
-train2 = sample(1:nrow(meanAugT_all_mo3),  nrow(meanAugT_all_mo3)*0.9 )
-dim(meanAugT_all_mo3)
+train2 = sample(1:nrow(meanAugT_all_mo2),  nrow(meanAugT_all_mo2)*0.9 )
+dim(meanAugT_all_mo2)
 length(train2)
+
+set.seed(101)
+train3 = sample(1:nrow(meanAugT_all_mo3),  nrow(meanAugT_all_mo3)*0.9 )
+dim(meanAugT_all_mo3)
+length(train3)
+
+
+set.seed(101)
+train4 = sample(1:nrow(meanAugT_all_mo4),  nrow(meanAugT_all_mo4)*0.9 )
+dim(meanAugT_all_mo4)
+length(train4)
 
 ```
 
@@ -146,8 +157,44 @@ rf.stream_T = randomForest(monthly_stream_T ~ ele +monthly_stream_Q   +monthly_a
 rf.stream_T
 rf.stream_T$importance
 
-rf.stream_T2 = randomForest(monthly_stream_T ~ ele +monthly_stream_Q   +monthly_air_T , data = meanAugT_all_mo3, subset = train2)
+rf.stream_T2 = randomForest(monthly_stream_T ~ ele +monthly_stream_Q   +monthly_air_T +CLASS , data = meanAugT_all_mo2, subset = train2)
 rf.stream_T2
 rf.stream_T2$importance
+
+rf.stream_T3 = randomForest(monthly_stream_T ~ ele +monthly_stream_Q   +monthly_air_T , data = meanAugT_all_mo3, subset = train3)
+rf.stream_T3
+rf.stream_T3$importance
+
+rf.stream_T4 = randomForest(monthly_stream_T ~ ele +monthly_stream_Q   +monthly_air_T , data = meanAugT_all_mo4, subset = train4)
+rf.stream_T4
+rf.stream_T4$importance
+```
+
+```{r}
+# Make prediction
+predictions <- predict(rf.stream_T, meanAugT_all_mo[-train,] )
+
+plot(meanAugT_all_mo[-train,]$monthly_stream_T,predictions,xlim=c(8,22) ,ylim=c(8,22), xlab="Observed stream temperature (degC)", ylab="Predicted stream temperature (degC)")
+
+```
+
+```{r}
+predictions2 <- predict(rf.stream_T2, meanAugT_all_mo2[-train2,] )
+
+plot(meanAugT_all_mo2[-train2,]$monthly_stream_T,predictions2 ,xlim=c(8,22) ,ylim=c(8,22))
+```
+
+
+```{r}
+predictions3 <- predict(rf.stream_T3, meanAugT_all_mo3[-train3,] )
+
+plot(meanAugT_all_mo3[-train3,]$monthly_stream_T,predictions3 ,xlim=c(16,26) ,ylim=c(16,26) , xlab="Observed stream temperature (degC)", ylab="Predicted stream temperature (degC)", main="No dam")
+```
+
+
+```{r}
+predictions4 <- predict(rf.stream_T4, meanAugT_all_mo4[-train4,] )
+
+plot(meanAugT_all_mo4[-train4,]$monthly_stream_T,predictions4 ,xlim=c(16,22) ,ylim=c(16,22) , xlab="Observed stream temperature (degC)", ylab="Predicted stream temperature (degC)" , main="Dam")
 ```
 
